--- a/.vsvode/settings.json
+++ b/.vsvode/settings.json
@@ -1,14 +1,15 @@
+
 {
     "liveSassCompile.settings.formats": [
         {
             "format": "expanded",
             "extensionName": ".css",
-            "savePath": "/css"
+            "savePath": "~/../css/"
         },
         {
             "format": "compressed",
             "extensionName": ".min.css",
-            "savePath": "/css"
+            "savePath": "~/../css/"
         }
         ],
         "liveSassCompile.settings.excludeList": ["**/node_modules/**", ".vscode/**"],
